Fix flake8 linting: line length and ignore E128 indent style

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Lint with flake8
         run: |
-          flake8 src/siren --max-line-length=100 --count --show-source --statistics
+          flake8 src/siren --max-line-length=100 --extend-ignore=E128 --count --show-source --statistics
 
       - name: Run tests
         run: |
